update shiny: add 1 more tab

--- a/Shiny App/Shiny App.Rmd
+++ b/Shiny App/Shiny App.Rmd
@@ -6,7 +6,7 @@ output: html_document
 
 ---
 
-```{r,warning=False}
+```{r,warning=False,message=FALSE}
 library(DT)
 library(here)
 library("readxl")
@@ -23,11 +23,12 @@ library("digest")
 library("bit")
 library(shinySignals)
 library(plotly)
-library(networkD3)
 library(tidyverse)
 library(htmlwidgets)
 library(devtools)
+library(ggthemes)
 library(shinyWidgets)
+library(rsconnect)
 ```
 
 
@@ -39,6 +40,8 @@ levels_names_discr<-c("Introduction Bachelor","Intermediate Bachelor","Advance B
 course_names<-c("Course","Practical","Research project","summer","winter","online")
 course_names_discr<-c("Course","Practical","Research project","Summer courses","Winter courses","Online")
 faculty_names<-c(unique(DS$Faculty)[complete.cases(unique(DS$Faculty))])
+topic_choices<-c("Strong theoretical base of data science practice and ethics",	"Causal inference",	"Data Collection methods",	"Database Management",	"nonSQL databases",	"Relational databases",	"Data Imputation"	,"Supervised Machine Learning","Data wrangling",	"Deep learning",	"Network science",	"Unsupervised Machine Learning",	"Programming", 	"SQL",	"Python", 	"Data clean-up",	"QGIS",	"PCRaster",	"R"	,"Rmardown",	"Epidemiology",	"Bayesian statistics",	"Statistical models",	"Stochastic Modeling",	"Explorative Data Analysis",	"Specific Data Analysis",	"Simulation models",	"PAC",	"Data mining",	"Big data",	"Visualizations",	"Graph Analysis/Graph construction",	"Data manipulation",	"SPSS",	"Complex systems",	"MAL",	"HLM",	"Text mining",	"Study design",	"Stata",	"JASP",	"Haskell",	"Mplus","Visual Studio",
+                                            "All"="all")
 ```
 
 
@@ -49,7 +52,9 @@ shinyApp(
                   tabPanel("Topics overview",
                            sidebarLayout(
                              column(width = 4,
-                             h6("The dashboard is an interactive tool for exploring Utrecht University's data science courses."),
+                                  wellPanel(
+                                      h6("The dashboard is an interactive tool for exploring Utrecht University's data science courses.")
+                                      ),
                              wellPanel(
                                shinyjs::useShinyjs(),
                                h4("Filters:"), 
@@ -78,12 +83,12 @@ shinyApp(
                                     });
                                   ")
                                )
-                               
+                              
                              ),
                              column(width = 8,
                                   
                                h4("Main topics covered",align = "center"),
-                                d3Output("d3"),
+                                d3Output("d3",height = "600px",width = "900px"),
                                h5(textOutput("text")),
                                 DT::dataTableOutput('table')
                                
@@ -91,24 +96,44 @@ shinyApp(
                            )
                              
                            ),
-                  tabPanel("Overview",
+                  tabPanel("Facet overview",
                            column(width = 12,
+                                  wellPanel(
+                                      h6("THere on the left you van see the university overview of the")
+                                      ),
                            wellPanel(
                              selectInput("overview", "Overview:",choices = 
                                           c("Faculty" = "Faculty",
                                             "Level"="Level",
                                             "Course type"="Course_type")),
                              numericInput("min_courses","Minimum number of courses: ",min = 1,max=120,value = 1),
-                             actionButton("action1", "Update the view")
+                             actionButton("action1", "Show facet view")
      
                            )),
                             column(width = 12,
                            uiOutput("plots")
                              )
                              
-                           )
-                 
-  )),
+                           ),
+                  tabPanel("Faculty input",
+                           sidebarLayout(
+                             column(width = 4,
+                                    wellPanel(
+                                      h6("THere on the left you van see the university overview of the")
+                                      ),
+                                    wellPanel(
+                                       selectizeInput(inputId = "topic", label = "Topics to compare:",choices = topic_choices
+                                          ,selected ='all', multiple = T,
+                                          options = list(
+                                            placeholder = 'select topic name')
+                                          )
+                                    )),
+                             column(width = 8,
+                                    h4("Faculty inpact on topics taught",align = "center"),
+                                    plotlyOutput("plots2")
+                                    )
+                           )),
+                  )),
 server = function(input, output, session) { 
   
   level=reactive(input$level)
@@ -119,17 +144,39 @@ server = function(input, output, session) {
     session$sendCustomMessage(type = "resetValue", message = "click_event")
   })
       
+observe({
+    x <- input$topic
 
+    # Can use character(0) to remove all choices
+    if (is.null(x)){
+      updateSelectInput(session, "topic",
+      label = paste("No topic chosen"),
+      choices = topic_choices,
+      selected = "")
+    }else if(length(x)>1 && any(x=="all")){
+      idx<-which(x=="all")
+      updateSelectInput(session, "topic",
+      label = paste("Topics to compare:"),
+      choices = topic_choices,
+      selected =x[-idx])
+    }else if(length(x)==1 && x=="all"){
+      updateSelectInput(session, "topic",
+      label = paste("Topics to compare:"),
+      choices = topic_choices,
+      selected =x)
+    }
+      
+  })
   output$d3 <- renderD3({
     if(level()=="all"){
-        data <- DS %>% select(c(1,2,4,6,19:60)) %>% filter(Faculty==faculty(),Course_type==course()) %>%
+        data <- DS %>% select(c(1,2,4,6,18:61)) %>% filter(Faculty==faculty(),Course_type==course()) %>%
                 pivot_longer(where(is.numeric)) %>% group_by(name) %>% 
                 summarise(value=sum(value,na.rm =T)) %>% filter(value>0)
        colnames(data)<-c("id","value")
        data<-left_join(data,short, by="id")
        r2d3(data=data, d3_version = 4, script ="bubble.js")
       }else{
-        data <- DS %>% select(c(1,2,4,6,19:60)) %>% filter(Faculty==faculty(),Level==level())
+        data <- DS %>% select(c(1,2,4,6,18:61)) %>% filter(Faculty==faculty(),Level==level())
         if(course() %in% data$Course_type){
           data<-data %>% filter(Course_type==course()) %>% pivot_longer(where(is.numeric)) %>%
             group_by(name) %>% summarise(value=sum(value,na.rm =T)) %>% filter(value>0)
@@ -151,7 +198,7 @@ server = function(input, output, session) {
     }
          })
 
-  
+
     
   input_plots <- reactiveValues()
   observeEvent(input$action1,{
@@ -170,7 +217,7 @@ server = function(input, output, session) {
       local({
       my_i <- i
       plotname <- paste("plot", my_i, sep="")
-      data <- DS %>% select(c(1,2,4,6,19:60))
+      data <- DS %>% select(c(1,2,4,6,18:61))
       names<-names_for_bubble[i]
       output[[plotname]] <- renderD3({
         data<- data  %>% filter(!!sym(input_plots$over)==names) %>% pivot_longer(where(is.numeric)) %>% group_by(name) %>%
@@ -192,7 +239,7 @@ server = function(input, output, session) {
      plotname <- paste("plot", i, sep="")
       column(width = 6,
               h4(plot_titles[i],align = "center"),
-               tags$div(style = "margin-top: 10px; margin-bottom: 10px;", d3Output(plotname))
+               tags$div(style = "margin-top: 0px; margin-bottom: 0px;", d3Output(plotname))
              )
     } )
 
@@ -213,49 +260,39 @@ output$table <- DT::renderDataTable({
               DS %>% filter(Faculty==faculty(),Level==level(),DS$Course_type==course(),(!!sym(input$clik_event))==1)%>% select(c(1,3,5,7,8,9,12))
             }
           }
-},server = F,options = list(searching = FALSE))
+},server = F,options = list(searching = TRUE))
+
+
+output$plots2 <- renderPlotly({
+
+  short2<-DS %>% select(c(1,2,4,6,18:61)) %>%pivot_longer(where(is.numeric)) %>% group_by(name,Faculty) %>% summarise(total=sum(value,na.rm =T)) %>% na.omit()
+  
+  plot1_perc<-short2 %>% mutate(total=round((total/sum(total))*100,2))
+  if(any(input$topic!="all")){
+    plot1_perc<-plot1_perc %>% filter(name %in% input$topic)
+  }
+  
+  ggplotly(
+    plot1_perc %>% ggplot(aes(x=total,y=name,fill=Faculty))+geom_col()+ylab("")+xlab("percentage (%)")+theme_minimal()
+  ) %>% layout(height = 800, width = 1200) })
 
 
 
 })
 ```
-
 ```{r}
-data <- DS %>% select(c(1,2,4,6,19:60)) %>% filter( Course_type=="Research project") %>% pivot_longer(where(is.numeric)) %>% group_by(name) %>% summarise(value=sum(value,na.rm =T)) %>% filter(value>0) 
-if("1" %in% data$Level){
-  data<-filter(Level=="1")
-}else{
-  data<-NULL
-}
-    colnames(data)<-c("id","value")
-data<-left_join(data,short, by="id")
-data
-```
-
-```{r}
-library(shiny)
-runApp(shinyApp(
+ shinyApp(
     ui = fluidPage(
-        shinyjs::useShinyjs(),
-        numericInput("val", "Choose value (max 10)", 5),
-        sliderInput(inputId = "range",
-                    label = "Range",
-                    min = 0,
-                    max = 10,
-                    step = 0.1,
-                    value = c(0,2))
+      useShinyjs(),
+      textInput("text", "Please type at least 3 characters"),
+      actionButton("element", "Submit")
     ),
-    server = function(input, output, session) {
-        observeEvent(input$val, {
-            if(input$val <= 10){
-                shinyjs::enable("range")
-            }else{
-                shinyjs::disable("range")
-            }
-        })
+    server = function(input, output) {
+      observe({
+        toggleState(id = "element", condition = nchar(input$text) >= 3)
+      })
     }
-))
+  )
 
 ```
-
 
